--- a/frontend/csyllabus/src/app/components/about/about.component.html
+++ b/frontend/csyllabus/src/app/components/about/about.component.html
@@ -31,6 +31,9 @@
             association between them.</p>
             <div class="app-download-area">
               <div class="app-download-btn wow fadeInUp" data-wow-delay="0.2s">
+               <a href="https://drive.google.com/file/d/1SVJkZqI_EQhsc1gNBkrYucElnf75i35b/view?usp=sharing" target="_blank">
+                 Read more about our system.
+               </a>
               </div>
             </div>
           </div>
