--- a/frontend/csyllabus/src/app/components/navbar/navbar.component.css
+++ b/frontend/csyllabus/src/app/components/navbar/navbar.component.css
@@ -1,69 +1,75 @@
- /* Add a black background color to the top navigation */
- .topnav {
-    background: -webkit-linear-gradient(left, rgb(116,153,227) ,rgb(47, 75, 131)); /* For Safari 5.1 to 6.0 */
-    background: -o-linear-gradient(right,rgb(116,153,227),rgb(47, 75, 131)); /* For Opera 11.1 to 12.0 */
-    background: -moz-linear-gradient(right,rgb(116,153,227),rgb(47, 75, 131)); /* For Firefox 3.6 to 15 */
-    background: linear-gradient(to right, rgb(116,153,227), rgb(47, 75, 131)); /* Standard syntax */
+/* Add a black background color to the top navigation */
+.topnav {
+  background: -webkit-linear-gradient(left, rgb(116, 153, 227), rgb(47, 75, 131)); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(right, rgb(116, 153, 227), rgb(47, 75, 131)); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(right, rgb(116, 153, 227), rgb(47, 75, 131)); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to right, rgb(116, 153, 227), rgb(47, 75, 131)); /* Standard syntax */
 
 }
-.logo{
-    float:left;
-    width: 160px;
+
+.logo {
+  float: left;
+  width: 160px;
 }
+
 /* Style the links inside the navigation bar */
 .topnav a {
-    float: right;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 20px 22px;
-    text-decoration: none;
-    font-size: 12px;
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 20px 22px;
+  text-decoration: none;
+  font-size: 12px;
 }
-#navigation{
+
+#navigation {
   position: absolute;
-  right:0;
+  right: 0;
 }
+
 /* Change the color of links on hover */
 .topnav a:hover {
-    background-color: rgba(39, 47, 124, 0.535);
-    color: white;
+  background-color: rgba(39, 47, 124, 0.535);
+  color: white;
 }
 
 /* Add an active class to highlight the current page */
 .active {
-    background-color: rgb(111, 141, 201);
-    color: white;
+  background-color: rgb(111, 141, 201);
+  color: white;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
- .icon {
-    display: none;
-color:white;
-   padding: 11px;
+.icon {
+  display: none;
+  color: white;
+  padding: 11px;
 }
- /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
- @media screen and (max-width: 600px) {
-   .logo{
-     float: right;
-   }
-    #navigation{
-      display: none;
-    }
-     .icon {
-        position: absolute;
-        right: 0;
-        top: 0;
-      display: block;
-    }
-.mat-menu-panel{
-   margin-top:56px !important;
- }
 
-
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+  .logo {
+    float: right;
   }
 
+  #navigation {
+    display: none;
+  }
 
- #myTopnav {
-   overflow: hidden;
- }
+  .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+    display: block;
+  }
+
+  .mat-menu-panel {
+    margin-top: 56px !important;
+  }
+
+}
+
+#myTopnav {
+  overflow: hidden;
+}
