--- a/frontend/csyllabus/src/app/components/course/course.component.html
+++ b/frontend/csyllabus/src/app/components/course/course.component.html
@@ -1,108 +1,73 @@
-
 <div class="col-md-12" style="background-color:#eaeaea; padding:0; height:100%">
   <div class="col-md-12" style="height:300px; background-size:cover; background-image:url(images/books.jpg)"></div>
-<div class="container-90p">
-<div class="col-md-12" style="padding-bottom:0px; margin-top:-86px;">
+  <div class="container-90p">
+    <div class="col-md-12" style="padding: 0; margin-top:-61px;">
 
-  <div class="col-md-8" style="padding-right:0px">
-<div  style="webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
-    box-shadow: 0 2px 11px rgba(0,0,0,0.2);padding:0; margin-right:10px; background-color:white">
-
-    <div style="text-align:left; background-color:#3c5a96;min-height:56px;line-height:50px">
-
-      <div style="display:inline-block; padding-left:20px; width:100%">
-        <p *ngIf="course" style="display:inline; font-size:20px; color: white;">{{course.name}}</p>
-      </div>
-
-    </div>
-
-        <div *ngIf="course && course.description" style="vertical-align:top; text-align:justify; line-height: 1.5; padding:30px;">
-          {{course.description}}
-
+      <div class="col-md-8">
+        <div style="webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
+    box-shadow: 0 2px 11px rgba(0,0,0,0.2);padding:0;  background-color:white">
+          <div style="text-align:left; background-color:#3c5a96;min-height:56px;line-height:50px">
+            <div style="display:inline-block; padding-left:20px; width:100%">
+              <p *ngIf="course" style="display:inline; font-size:20px; color: white;">{{ course.name }}</p>
+            </div>
+          </div>
+          <div *ngIf="course && course.description"
+               style="vertical-align:top; text-align:justify; line-height: 1.5; padding:30px;">
+            {{ course.description }}
+          </div>
         </div>
-
-
-
-    </div>
-    </div>
-
-<div class="col-md-4" style="padding-left:0px">
-  <div  style="padding:0px;webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
+      </div>
+      <div class="col-md-4">
+        <div style="padding:0px;webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
     box-shadow: 0 2px 11px rgba(0,0,0,0.2);background-color:white; ">
-
-    <div class="col-md-12" style="padding:0px;text-align:left; background-color:#3c5a96; height:56px; line-height:56px">
-
-      <div style="display:inline-block; padding-left:20px; vertical-align:top">
-        <p style="display:inline; font-size:20px;color: white;">Details</p>
-      </div>
-
-    </div>
-
-    <div>
-
-    <mat-list role="list" style="padding-left:20px">
-      <mat-list-item style="text-align:left" *ngIf="course && course.university" role="listitem">{{course.university}}</mat-list-item>
-  <mat-list-item style="text-align:left" *ngIf="course && course.faculty" role="listitem">{{course.faculty}}</mat-list-item>
-  <mat-list-item *ngIf="course && course.study_lvl" role="listitem">Study level: {{course.study_lvl}}</mat-list-item>
-  <mat-list-item *ngIf="course && course.semester" role="listitem">Semester: {{course.semester}}</mat-list-item>
-  <mat-list-item *ngIf="course && course.ects" role="listitem">Credits:  {{course.ects}}</mat-list-item>
-  <mat-list-item *ngIf="course && course.english_level" role="listitem">  English level: {{course.english_level}}</mat-list-item>
-</mat-list>
-
-
-    </div>
-
-  </div>
-  </div>
-
-</div>
-
-  <div class="col-md-12">
-
-    <div class="col-md-4" style="padding-right:0px; padding-top:0px">
-
-    <div style="padding:0px;webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
-      box-shadow: 0 2px 11px rgba(0,0,0,0.2); margin-right:10px; background-color:white">
-
-      <div class="col-md-12" style="padding:0px;text-align:left; background-color:#3c5a96;">
-
-
-        <div style="display:inline-block; padding-left:20px; vertical-align:top;height:56px; line-height:56px">
-          <p style="display:inline; font-size:20px; color: white;">Similar courses</p>
+          <div class="col-md-12"
+               style="padding:0px;text-align:left; background-color:#3c5a96; height:56px; line-height:56px">
+            <div style="display:inline-block; padding-left:20px; vertical-align:top">
+              <p style="display:inline; font-size:20px;color: white;">Details</p>
+            </div>
+          </div>
+          <div>
+            <mat-list role="list" style="padding-left:20px">
+              <mat-list-item style="text-align:left" *ngIf="course && course.university"
+                             role="listitem">{{ course.university }}</mat-list-item>
+              <mat-list-item style="text-align:left" *ngIf="course && course.faculty"
+                             role="listitem">{{ course.faculty }}</mat-list-item>
+              <mat-list-item *ngIf="course && course.study_lvl" role="listitem">Study
+                level: {{ course.study_lvl }}</mat-list-item>
+              <mat-list-item *ngIf="course && course.semester" role="listitem">
+                Semester: {{ course.semester }}</mat-list-item>
+              <mat-list-item *ngIf="course && course.ects" role="listitem">Credits: {{ course.ects }}</mat-list-item>
+              <mat-list-item *ngIf="course && course.english_level" role="listitem"> English
+                level: {{ course.english_level }}</mat-list-item>
+            </mat-list>
+          </div>
         </div>
+      </div>
+    </div>
+    <div class="col-md-12" style="padding: 0;">
+      <div class="col-md-4">
+        <div style="padding:0px;webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
+      box-shadow: 0 2px 11px rgba(0,0,0,0.2); background-color:white">
+          <div class="col-md-12" style="padding:0px;text-align:left; background-color:#3c5a96;">
+            <div style="display:inline-block; padding-left:20px; vertical-align:top;height:56px; line-height:56px">
+              <p style="display:inline; font-size:20px; color: white;">Similar courses</p>
+            </div>
+          </div>
+          <div>
+            <mat-list *ngIf="similarCourses!=undefined" role="list">
+              <mat-list-item style="margin-top:15px; margin-bottom:10px" *ngFor="let similar of similarCourses">
 
-
+                <p style="text-align:left">{{ similar.name }}
+                  <span style="color:grey;"> {{ similar.university }}</span></p>
+              </mat-list-item>
+            </mat-list>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8" >
+        <app-social *ngIf="course" [courseId]=course.id style=""></app-social>
 
       </div>
-
-      <div>
-
-      <mat-list  *ngIf="similarCourses!=undefined" role="list">
-    <mat-list-item  style="margin-top:15px; margin-bottom:10px" *ngFor="let similar of similarCourses">
-
-      <p style="text-align:left" >{{similar.name}}
-        <span style="color:grey;"> {{similar.university}}</span></p>
-    </mat-list-item>
-
-    </mat-list>
-
-
-      </div>
-
     </div>
   </div>
-
-  <div class="col-md-8" style="padding-right:0px; webkit-box-shadow: 0 2px 11px rgba(0,0,0,0.2);
-    box-shadow: 0 2px 11px rgba(0,0,0,0.2); background-color:white">
-
-
-      <app-social *ngIf="course" [courseId]=course.id></app-social>
-
-
-  </div>
-
-  </div>
-</div>
-
-
 </div>
