--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -42,7 +42,29 @@
       </div>
     </div>
   </div>
-  <div class="col-md-12">&nbsp;</div>
+  <div class="container custom-scrollbar">
+    <a routerLink="/university/1" class="item">
+      <img src="images/uni_logos/unizg.png">
+    </a>
+    <a routerLink="/university/2" class="item">
+      <img src="images/uni_logos/polimi.png">
+    </a>
+    <a routerLink="/university/4" class="item">
+      <img src="images/uni_logos/laquila.png">
+    </a>
+    <a routerLink="/university/5" class="item">
+      <img src="images/uni_logos/epfl.png">
+    </a>
+    <a routerLink="/university/6" class="item">
+      <img src="images/uni_logos/texas.png">
+    </a>
+    <a routerLink="/university/7" class="item">
+      <img src="images/uni_logos/stanford.png">
+    </a>
+    <a routerLink="/university/8" class="item">
+      <img src="images/uni_logos/ucla.png">
+    </a>
+  </div>
 </div>
 <div id="filters-container" *ngIf="chooserSelectedExplorer || chooserSelectedComparator" style="position: relative;">
   <router-outlet name="sub"></router-outlet>
