fixed background problem on edge

--- a/frontend/csyllabus/src/app/core/comparator/comparator.component.html
+++ b/frontend/csyllabus/src/app/core/comparator/comparator.component.html
@@ -14,7 +14,7 @@
         </mat-slide-toggle>
         <span class="triangle"></span>
       </p>
-      <div class="col-md-12" style="background-color: #fffffffa;text-align: left; position: relative; padding: 20px;">
+      <div class="col-md-12" style="background-color: white;text-align: left; position: relative; padding: 20px;">
         <div class="forms-group" *ngIf="showNormalComparator">
           <mat-form-field class="input">
             <mat-select required placeholder="Select courses from" [formControl]="pokemonControl">
