--- a/frontend/csyllabus/src/app/core/explorer/explorer.component.html
+++ b/frontend/csyllabus/src/app/core/explorer/explorer.component.html
@@ -2,7 +2,7 @@
   <div class="bg-container custom-scrollbar" align="center">
     <div class="container" style="padding-top:10%">
       <p class="custom-card-title">Explore courses from a university</p>
-      <div class="col-md-12" style="background-color: #fffffffa;text-align: left; position: relative; padding: 20px;">
+      <div class="col-md-12" style="background-color: white;text-align: left; position: relative; padding: 20px;">
         <br>
         <div class="forms-group">
           <form>
