one course page

--- a/frontend/csyllabus/src/app/core/core.component.html
+++ b/frontend/csyllabus/src/app/core/core.component.html
@@ -42,27 +42,27 @@
       </div>
     </div>
   </div>
-  <div class="container custom-scrollbar">
+  <div class="container custom-scrollbar" style="line-height:120px; padding-top:70px">
     <a routerLink="/university/1" class="item">
-      <img src="images/uni_logos/unizg.png">
+      <img title="University of Zagreb" style="max-height:100px; max-width:100px" src="images/uni_logos/unizg.png">
     </a>
     <a routerLink="/university/2" class="item">
-      <img src="images/uni_logos/polimi.png">
+      <img title="Politecnico di Milano" src="images/uni_logos/polimi.png">
     </a>
     <a routerLink="/university/4" class="item">
-      <img src="images/uni_logos/laquila.png">
+      <img title="University of L'Aquila" src="images/uni_logos/laquila.png">
     </a>
     <a routerLink="/university/5" class="item">
-      <img src="images/uni_logos/epfl.png">
+      <img title="Swiss Federal Institute of Technology in Lausanne" src="images/uni_logos/epfl.png">
     </a>
     <a routerLink="/university/6" class="item">
-      <img src="images/uni_logos/texas.png">
+      <img title="The University of Texas at Austin" src="images/uni_logos/texas.png">
     </a>
     <a routerLink="/university/7" class="item">
-      <img src="images/uni_logos/stanford.png">
+      <img title="University of Stanford" src="images/uni_logos/stanford.png">
     </a>
     <a routerLink="/university/8" class="item">
-      <img src="images/uni_logos/ucla.png">
+      <img title="University of California, Los Angeles" style="max-height:100px; max-width:100px;" src="images/uni_logos/ucla.png">
     </a>
   </div>
 </div>
