one course page

--- a/frontend/admin/src/app/course/course/course.html
+++ b/frontend/admin/src/app/course/course/course.html
@@ -4,7 +4,7 @@
       Courses
     </button>
     <mat-icon style=" display: inline-block;vertical-align: middle;">chevron_right</mat-icon>
-    <button mat-button [routerLink]="['/course/' + course.id]" style=" display: inline-block;vertical-align: middle;">
+    <button mat-button [routerLink]="['/course/edit/' + course.id]" style=" display: inline-block;vertical-align: middle;">
       {{ course.id }}
     </button>
   </div>
