--- a/frontend/admin/src/app/university/university/university.html
+++ b/frontend/admin/src/app/university/university/university.html
@@ -1,6 +1,6 @@
 <div style="height: 70px;">
   <div style="max-width: 1000px; margin-left: auto; margin-right: auto; vertical-align: middle;">
-    <button mat-button [routerLink]="['/courses']" style=" display: inline-block;vertical-align: middle;">
+    <button mat-button [routerLink]="['/universities']" style=" display: inline-block;vertical-align: middle;">
       Universities
     </button>
     <mat-icon style=" display: inline-block;vertical-align: middle;">chevron_right</mat-icon>
