--- a/backend/templates/backend/app.html
+++ b/backend/templates/backend/app.html
@@ -2,24 +2,47 @@
 
 <!doctype html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Csyllabus</title>
-        <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
-        <link rel="stylesheet" type="text/css" href="{% static "stylesheets.css" %}">
-        <script src="{% static "vendor.bundle.js" %}"></script>
-        <!--[if lt IE 9]>
-        <script src="//oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="//oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-        <![endif]-->
-    </head>
-    <body>
-        <noscript>This application requires javascript to function.</noscript>
-        <div id="root"></div>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Csyllabus</title>
+    <base href="/">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+    <script type="text/javascript">angular.module('CSyllabus', ['ngMaterial']);</script>
+</head>
+<app-root></app-root>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115865579-1"></script><!-- Google Analytics -->
+<script>(function (i, s, o, g, r, a, m) {
+    i['GoogleAnalyticsObject'] = r;
+    i[r] = i[r] || function () {
+        (i[r].q = i[r].q || []).push(arguments)
+    }, i[r].l = 1 * new Date();
+    a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+    a.async = 1;
+    a.src = g;
+    m.parentNode.insertBefore(a, m)
+})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
+ga('create', 'UA-115865579-1', 'auto');
+</script><!-- End Google Analytics -->
+<body>
+<script src="{% static "inline.bundle.js" %}"></script>
 
-    </body>
-                <script src="{% static "main.bundle.js" %}"></script>
+<script src="{% static "vendor.bundle.js" %}"></script>
+
+<script src="{% static "polyfills.bundle.js" %}"></script>
+
+<script src="{% static "main.bundle.js" %}"></script>
+</body>
 
 </html>
